Changed JSON formats to access DataValue instead of stream.  Renamed Window to Screen.  Implemented IpAddress.

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ Hect/Intermediate/*
 HectSystemTests/Intermediate/*
 HectUnitTests/Intermediate/*
 Judecca/Intermediate/*
-Hect.opensdf
+*.opensdf
+*.sdf
+*.suo
