--- a/HectUnitTests/HectUnitTests.vcxproj
+++ b/HectUnitTests/HectUnitTests.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Source\BitFieldTests.h" />
     <ClInclude Include="Source\ClientServerTests.h" />
     <ClInclude Include="Source\IpAddressTests.h" />
+    <ClInclude Include="Source\MemoryStreamTests.h" />
     <ClInclude Include="Source\StorageTests.h" />
     <ClInclude Include="Source\DataValueTests.h" />
     <ClInclude Include="Source\FrustumTests.h" />
