--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -292,12 +292,13 @@
     <ClInclude Include="Source\Graphics\VertexLayout.h" />
     <ClInclude Include="Source\Graphics\Screen.h" />
     <ClInclude Include="Source\IO\WriteStream.h" />
-    <ClInclude Include="Source\Network\Client.h" />
+    <ClInclude Include="Source\Network\UdpClient.h" />
     <ClInclude Include="Source\Network\IpAddress.h" />
     <ClInclude Include="Source\Network\Packet.h" />
     <ClInclude Include="Source\IO\MemoryReadStream.h" />
     <ClInclude Include="Source\IO\MemoryWriteStream.h" />
-    <ClInclude Include="Source\Network\Server.h" />
+    <ClInclude Include="Source\Network\UdpEvent.h" />
+    <ClInclude Include="Source\Network\UdpServer.h" />
     <ClInclude Include="Source\Noise\Random.h" />
   </ItemGroup>
   <ItemGroup>
@@ -363,12 +364,13 @@
     <ClCompile Include="Source\Graphics\VertexLayout.cpp" />
     <ClCompile Include="Source\Graphics\Screen.cpp" />
     <ClCompile Include="Source\IO\WriteStream.cpp" />
-    <ClCompile Include="Source\Network\Client.cpp" />
+    <ClCompile Include="Source\Network\UdpClient.cpp" />
     <ClCompile Include="Source\Network\IpAddress.cpp" />
     <ClCompile Include="Source\Network\Packet.cpp" />
     <ClCompile Include="Source\IO\MemoryReadStream.cpp" />
     <ClCompile Include="Source\IO\MemoryWriteStream.cpp" />
-    <ClCompile Include="Source\Network\Server.cpp" />
+    <ClCompile Include="Source\Network\UdpEvent.cpp" />
+    <ClCompile Include="Source\Network\UdpServer.cpp" />
     <ClCompile Include="Source\Noise\Random.cpp" />
   </ItemGroup>
   <ItemGroup>
