--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -296,7 +296,8 @@
     <ClInclude Include="Source\Network\Packet.h" />
     <ClInclude Include="Source\IO\MemoryReadStream.h" />
     <ClInclude Include="Source\IO\MemoryWriteStream.h" />
-    <ClInclude Include="Source\Network\UdpSocket.h" />
+    <ClInclude Include="Source\Network\Connection.h" />
+    <ClInclude Include="Source\Network\Socket.h" />
     <ClInclude Include="Source\Noise\Random.h" />
   </ItemGroup>
   <ItemGroup>
@@ -366,7 +367,8 @@
     <ClCompile Include="Source\Network\Packet.cpp" />
     <ClCompile Include="Source\IO\MemoryReadStream.cpp" />
     <ClCompile Include="Source\IO\MemoryWriteStream.cpp" />
-    <ClCompile Include="Source\Network\UdpSocket.cpp" />
+    <ClCompile Include="Source\Network\Connection.cpp" />
+    <ClCompile Include="Source\Network\Socket.cpp" />
     <ClCompile Include="Source\Noise\Random.cpp" />
   </ItemGroup>
   <ItemGroup>
