--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ Hect/Doc/*
 Hect/Intermediate/*
 Hect/Tests/SystemTests/Intermediate/*
 Hect/Tests/UnitTests/Intermediate/*
+SolidBlack/Dependencies/Sqlite/Intermediate/*
+SolidBlack/Dependencies/SqliteShell/Intermediate/*
+SolidBlack/AuthenticationServer/Intermediate/*
 SolidBlack/Common/Intermediate/*
 SolidBlack/Server/Intermediate/*
 SolidBlack/Client/Intermediate/*
