--- a/SolidBlack/Common/Common.vcxproj.filters
+++ b/SolidBlack/Common/Common.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="Source\Common\Systems\FreeCameraControllerSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Common\States\SolidBlackState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Common\Systems\FreeCameraControllerSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Common\States\SolidBlackState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
